# rust-auth

./: .gitignore  Cargo.toml  docker-compose.yml  help.md
src/: consts.rs  errors.rs  main.rs  middleware.rs  state.rs
src/helper/: user.rs
src/models/: invitation.rs  log.rs  mod copy.rs  mod.rs  organization.rs  permission.rs  role.rs  team.rs  tokens.rs  user.rs  verification.rs
src/routes/: mod.rs
src/routes/admin_panel/: mod.rs
src/routes/auth_route/: invitation.rs  mod.rs  modify_user.rs  organization.rs  role.rs  teams.rs  user.rs
src/utils/: email_verification.rs  get_record_id.rs  jwt.rs  mod.rs  permission_context.rs  pwd.rs  slug.rs  time.rs  validated_form.rs  validator.rs
test/: user.rest
